--- a/css/estilos.css
+++ b/css/estilos.css
@@ -39,37 +39,38 @@ body header div nav ol li a{
 /*------ Variables */
 :root{
     /*------ Colores */
-    --blue-dark: #003E80;
-    --blue-light: #4DA3FF;
-    --blue: #007CFF;
-    --blue-gray: #265180;
-    --blue-sgray: #0063CC;
-    --black-color: #313337;
-    --white-color: white;
+    --dark: #000D33;
+    --light: #D9D9D9;
+    --gray: #A6A6A6;
+    --sgray: #595959;
+    --black: #313337;
+    --white: #fafafa;
     /*------ Tipografía */
     --normal:12px;
     --title-size: 23px;
     /*------ Espaciado */
     --space:10px;
     --space-2:20px;
+    --font-family-title: 'Allerta Stencil', sans-serif;
+    --font-family: 'Roboto', sans-serif;
 }
 
 html{
-    background-color: #fafafa;
+    background-color: var(--white);
 }
 
 body{
-    font-family: 'Roboto', sans-serif;
+    font-family: var(--font-family);
     margin: 0px;
 }
 
 h1, h2, h3, h4, h5, h6{
-    font-family: 'Ubuntu', sans-serif;
+    font-family: var(--font-family-title);
     font-weight: normal;
 }
 
 h1{
-    color: var(--white-color);
+    color: var(--gray);
     font-size: 32px;
     letter-spacing: -.2px;
     line-height: 1.5em;
@@ -77,16 +78,16 @@ h1{
 }
 
 h2{
-    color: var(--blue-light);
+    color: var(--dark);
     text-transform: uppercase;
-    font-family: 'Roboto', sans-serif;
+    font-family: var(--font-family);
     font-weight: bold;
     font-size: 24px;
     margin-bottom: 40px;
 }
 
 h1 strong{
-    color: var(--blue-light);
+    color: var(--white);
 }
 
 ol, ul{
@@ -111,13 +112,13 @@ figure{
 .header{
     height: 70px;
     align-items: center;
-    background-color: var(--blue-gray);
-    color: var(--white-color);
+    background-color: var(--dark);
+    color: var(--white);
     display: flex;
     justify-content: space-between;
 }
 .header a{
-    color: var(--white-color);
+    color: var(--white);
     text-decoration: none;   
     display: flex;    
     align-items: center;
@@ -141,7 +142,7 @@ figure{
 }
 .hero{
     align-items: center;
-    background-color: var(--blue-gray);
+    background-color: var(--dark);
     justify-content: space-between;
     display: flex;
     height: 300px;
@@ -157,11 +158,11 @@ figure{
 }
 
 .portfolio{
-    background-color: #fafafa;
+    background-color: var(--white);
     padding: 20px;
 }
 .project{
-    background: var(--white-color);
+    background: var(--white);
     border: 1px solid gray;
     border-radius: 10px;
     margin-bottom: 15px;
@@ -172,7 +173,9 @@ figure{
 }
 
 .project strong{
-    font-family: 'Ubuntu', sans-serif;
+    /* font-family: 'Ubuntu', sans-serif; */
+    font-family: var(--font-family-title);
+
 }
 .project-details{
     width: 500px;
@@ -200,7 +203,7 @@ figure{
 }
 
 .skill-list{
-    background-color: #fafafa;
+    background-color: var(--white);
 }
 .skills{
     display: flex;
@@ -216,7 +219,7 @@ figure{
     flex-shrink: 0; /*Para que tome el ancho y alto dado y no lo que se le de la gana XD*/
     border-radius: 10px;
     overflow: hidden;
-    background-color: #f4fbff;
+    background-color: var(--white);
 }
 
 .skill-title{
@@ -238,7 +241,7 @@ figure{
 }
 
 .skill-url{
-    color: #056fff;
+    color: var(--dark);
     border: 1px solid;
     padding: 10px 20px;
     text-decoration: none;
@@ -252,8 +255,8 @@ figure{
 }
 
 .contact{
-    background-color: var(--blue-gray);
-    color: white;
+    background-color: var(--dark);
+    color: var(--white);
     height: 150px;
     display: flex;
     align-items: center;
@@ -261,11 +264,11 @@ figure{
 }
 
 .form-email h3{
-    font-family: 'Ubuntu', sans-serif;
+    font-family: var(--font-family-title);
     text-transform: uppercase;
 }
 .form-email input{
-    border-color: #7c7c7c;
+    border-color: var(--white);
     border-radius: 5px;
     border-style: solid;
     padding: 5px 20px 5px 25px;
@@ -312,8 +315,8 @@ figure{
 
 
 .footer{ 
-    background-color: var(--blue-gray);
-    color: var(--white-color);
+    background-color: var(--dark);
+    color: var(--white);
     display: flex;
     align-items: center;
     justify-content: space-between;
