--- a/css/estilos.css
+++ b/css/estilos.css
@@ -108,6 +108,7 @@ figure{
     align-items: inherit;
     height: inherit;
     flex-wrap: inherit;
+    padding: 0 .5em;
 }
 
 .header{
@@ -359,12 +360,13 @@ figure{
 
 
 .footer{ 
-    background-color: var(--dark);
+    background-color: black;
     color: var(--white);
     display: flex;
     align-items: center;
     justify-content: space-between;
     flex-wrap: wrap;
+    padding: .5em 0;
 }
 
 .footer img{
@@ -446,15 +448,36 @@ figure{
     .skill img {
         width: 100%;
     }
+
+    .contact {
+        height: auto;
+        padding: 1em 0;
+        text-align: center;
+        display: block;
+    }
+
+    .form-email button{
+        margin: 1em auto;
+    }
+
 }
-@media screen and (max-width: 479px){
+@media screen and (max-width: 475px){
     .project-details {
         font-size: 12px;
     }
     
     .skill-detail{
         margin: -50px .5em .5em;
-        padding: .8em;
+    }
+    
+    .form-email h3{
+        margin-top: 0;
+    }
+
+    .footer {
+        display: block;
+        text-align: center;
+        border: 1px solid transparent;
     }
 }
 @media screen and (max-width: 319px){
