--- a/css/estilos.css
+++ b/css/estilos.css
@@ -40,6 +40,7 @@ body header div nav ol li a{
 :root{
     /*------ Colores */
     --dark: #000D33;
+    --dark-trns: rgba(0, 13, 51, 0.8);
     --light: #D9D9D9;
     --gray: #A6A6A6;
     --sgray: #595959;
@@ -99,6 +100,22 @@ ol, ul{
 figure{
     margin: 0px;
 }
+
+.burger-button{
+    width: 40px;
+    height: 40px;
+    border-radius: 50%;
+    background-color: var(--dark-trns);
+    color: var(--white);
+    display: none;
+    align-items: center;
+    justify-content: center;
+    position: fixed;
+    z-index: 4;
+    left: .5em;
+    top: .5em;
+}
+
 .container{
     max-width: 1080px;
     flex: 1;
@@ -394,7 +411,7 @@ figure{
         width: 100%;
         background: rgba(0, 0, 0, 0.4);
     }
-
+    
     h1 strong{
         text-shadow: initial;
     }
@@ -418,6 +435,9 @@ figure{
     }    
 }
 @media screen and (max-width: 767px){
+    .burger-button{
+        display: flex;
+    }
 
     .header{
         display: block;
@@ -435,12 +455,35 @@ figure{
     
     .header a {
         justify-content: center;
+        height: 38px;
+        font-size: 2em;
+        text-decoration: underline;
+        margin-bottom: .5em;
     }
     
     .header .logo{
         text-align: center;
     }
 
+    .menu{
+        position: fixed;
+        background-color: var(--dark-trns);
+        z-index: 3;
+        top: 0;
+        left: -100vw;
+        width: 100vw;
+        /* height: 100vh; */
+        bottom: 0;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        transition: .3s;
+    }
+
+    .menu.is-active{
+        left: 0;
+    }
+    
     .hero-image{
         filter: opacity(80%) blur(3px);
     }
@@ -511,7 +554,7 @@ figure{
     h1{
         font-size: 1.5em;
     }
-    
+        
     .my-selfDescription{
         font-size: .6em;
     }
