--- a/css/estilos.css
+++ b/css/estilos.css
@@ -439,6 +439,10 @@ figure{
     .portfolio, .my-self{
         padding: 0px;
     }
+
+    .container #head{
+        padding-left: 35vw;
+    }
 }
 @media screen and (max-width: 767px){
 
