was created the project section

--- a/css/buttons.css
+++ b/css/buttons.css
@@ -8,12 +8,23 @@
 
 .btn-primary{
     background-color: var(--primary1);
+    border: solid var(--primary1);
     color: var(--withe);
-    border: none;
 }
 
 .btn-primary:hover{
     background-color: var(--primary2);
     color: var(--black);
     border: none;
+}
+
+.btn-secondary{
+    background-color: transparent;
+    color: var(--withe);
+    border: 2px solid var(--primary1);
+}
+
+.btn-secondary:hover{
+    background-color: var(--primary2);
+    color: var(--black);
 }
