--- a/css/index.css
+++ b/css/index.css
@@ -13,6 +13,8 @@
 @import "./aboutme.css";
 @import "./skills.css";
 @import "./projects.css";
+@import "./hobbies.css";
+@import "./inspirations.css";
 /*------ Variables ------*/
 :root{
     /*------ Colors ------*/
@@ -58,7 +60,7 @@ h2{
     padding-block-end: 8px;
     letter-spacing: .2em;
     margin-block-start: 32px;
-    margin-block-end: 32px;
+    margin-block-end: 0px;
 }
 
 .sub-title{
