--- a/css/hobbies.css
+++ b/css/hobbies.css
@@ -2,5 +2,5 @@
   list-style-image: url(../img/li-item.svg);
   font: var(--headline4);
   text-transform: uppercase;
-  padding-block-start: 32px;
+  margin-block-start: 32px;
 }
