--- a/css/index.css
+++ b/css/index.css
@@ -21,6 +21,7 @@
 :root{
     /*------ Colors ------*/
     --black: #060609;
+    --black-trns: #0606099f;
     --withe: #F2F2F2;
     --gray: #737D82;
     --primary1: #3C7BCC;
