--- a/css/header.css
+++ b/css/header.css
@@ -14,6 +14,12 @@
 }
 
 @media screen and (min-width: 768px){
+    .header{
+        position: sticky;
+        top: 0;
+        background-color: var(--black-trns);
+    }
+
     .head-content{
         justify-content: space-between;
     }
@@ -37,7 +43,7 @@
         text-transform: uppercase;
     }
     
-    .menu ul a.is-active{
-        color: var(--purple);
+    .menu ul a:hover{
+        color: var(--primary1);
     }
 }
