--- a/css/projects.css
+++ b/css/projects.css
@@ -30,3 +30,18 @@
 .project-description button{
     margin-block-start: 32px;
 }
+
+@media screen and (min-width: 768px){
+    .projects{
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: space-between;
+    }
+    .project-item{
+        max-width: 325px;
+    }
+
+    .project-description{
+        min-block-size: 170px;
+    }
+}
