--- a/css/wrapper.css
+++ b/css/wrapper.css
@@ -2,7 +2,7 @@
     max-inline-size: 1158px;
     padding-inline-end: 28px;
     padding-inline-start: 28px;
-
+    margin: 0 auto;
 }
 
 .wrapper .social{
