--- a/css/form.css
+++ b/css/form.css
@@ -42,3 +42,9 @@ input, textarea{
         margin-block-start: 32px;
     }
 }
+
+@media screen and (min-width: 1024px){
+    .form div:nth-child(1), .form div:nth-child(2){
+        min-width: 540px;
+    }
+}
