was modified color link in header menu

--- a/css/buttons.css
+++ b/css/buttons.css
@@ -4,6 +4,7 @@
     border-radius: 2px;
     padding-inline-start: 24px;
     padding-inline-end: 24px;
+    text-decoration: none;
 }
 
 .btn-primary{
