--- a/css/form.css
+++ b/css/form.css
@@ -23,6 +23,10 @@ input, textarea{
     flex-direction: column;
 }
 
+.form #mailto{
+    opacity: 0;
+}
+
 @media screen and (min-width: 768px){
     .form{
         display: flex;
