--- a/css/buttons.css
+++ b/css/buttons.css
@@ -8,15 +8,15 @@
 }
 
 .btn-primary{
-    background-color: var(--primary1);
-    border: 2px solid var(--primary1);
-    color: var(--withe);
+    background-color: var(--primary2);
+    border: 2px solid var(--primary2);
+    color: var(--black);
 }
 
 .btn-primary:hover{
-    background-color: var(--primary2);
+    background-color: var(--withe);
     color: var(--black);
-    border: 2px solid var(--primary2);
+    border: 2px solid var(--withe);
 }
 
 .btn-secondary{
