Was added accessibility in sosial media buttons and menu items

--- a/css/header.css
+++ b/css/header.css
@@ -46,4 +46,9 @@
     .menu ul a:hover{
         color: var(--primary2);
     }
+
+    .menu ul a:focus{
+        outline: none;
+        color: var(--primary2);
+    }
 }
