--- a/css/buttons.css
+++ b/css/buttons.css
@@ -5,6 +5,7 @@
     padding-inline-start: 24px;
     padding-inline-end: 24px;
     text-decoration: none;
+    cursor: pointer;
 }
 
 .btn-primary{
