--- a/css/header.css
+++ b/css/header.css
@@ -1,54 +1,126 @@
-.header{
-    block-size: 50px;
-    align-items: center;
-}
-.head-content {
-    display: flex;
-    justify-content: center;
-    align-items: auto;
-    padding: 8px;
+ul {
+    padding-inline-start: 0;
 }
 
-.menu{
+.nav__toggle {
+    position: absolute;
+    cursor: pointer;
+    margin: 0 1rem;
+    right: 0;
+}
+
+.nav__toggle svg {
+    width: 24px;
+    fill: var(--color-link);
+}
+
+.nav__toggle .close {
+    display: none;
+}
+.nav__toggle .close {
     display: none;
 }
 
-@media screen and (min-width: 768px){
-    .header{
-        position: sticky;
-        top: 0;
-        background-color: var(--black-trns);
-    }
+.nav__toggle .close,
+.nav__toggle .menu {
+    margin-top: 0.3rem;
+}
 
-    .head-content{
-        justify-content: space-between;
-    }
+.nav__checkbox {
+    display: none;
+}
 
-    .menu{
-        display: block;
-    }
+.nav__menu {
+    display: flex;
+    flex-direction: column;
+    gap: 2rem;
+    align-items: center;
+    margin: 1rem;
+}
 
-    .menu ul{
-        display: flex;
-        list-style: none;
-        margin:0px;
-        gap:40px;
-        margin-block-start: 6px;
-    }
+.nav__menu li {
+    list-style-type: none;
+    display: none;
+    font: var(--font-link-menu);
+    text-transform: uppercase;
+}
 
-    .menu ul a {
-        text-decoration: none;
-        color: var(--white);
-        font: var(--menu);
-        text-transform: uppercase;
+.nav__menu li:first-child {
+    margin-right: auto;
+    display: flex;
+}
+
+.nav__menu a {
+    position: relative;
+    text-decoration: none;
+    color: var(--color-link);
+}
+
+.nav__menu a::after{
+    content: "";
+    position: absolute;
+    width: 0;
+    height: 1px;
+    left: 0;
+    bottom: -4px;
+    background: var(--color-link);
+    transition: width 0.2s ease-in-out;
+}
+
+.nav__menu a:hover{
+    color: var(--color-vanilla);
+}
+
+.nav__menu a:hover::after{
+    width: 100%;
+}
+
+.menu__logo {
+    height: 30px;
+}
+
+.menu__logo img {
+    height: 100%;
+}
+
+.rest-name {
+    display: none;
+}
+
+#nav__checkbox:checked ~ ul.nav__menu li {
+    display: block;
+}
+
+#nav__checkbox:checked ~ label.nav__toggle .close {
+    display: block;
+}
+
+#nav__checkbox:checked ~ label.nav__toggle .menu {
+    display: none;
+}
+
+@media only screen and (min-width: 680px) {
+    .menu__logo {
+        align-items: center;
+    }
+    .rest-name {
+        display: initial;
+        margin-left: 4px;
+        text-transform: none;
+    }
+}
+@media only screen and (min-width: 560px) {
+    .nav__toggle {
+        display: none;
     }
     
-    .menu ul a:hover{
-        color: var(--primary2);
+    .nav__menu {
+        width: initial;
+        position: relative;
+        flex-direction: row;
     }
-
-    .menu ul a:focus{
-        outline: none;
-        color: var(--primary2);
+    
+    .nav__menu li {
+        display: block;
     }
 }
