Was changed responsive icons menu

--- a/css/index.css
+++ b/css/index.css
@@ -7,9 +7,8 @@
 #  ·················
 */
 @import "./header.css";
-/* @import "./wrapper.css";
 @import "./hero.css";
-@import "./buttons.css";
+/*@import "./buttons.css";
 @import "./aboutme.css";
 @import "./skills.css";
 @import "./projects.css";
